JumpScript/tests/baselines/reference/typeofClass.errors.txt
tests/cases/compiler/typeofClass.jump(8,4): error TS2339: Property 'bar' does not exist on type 'K'.
tests/cases/compiler/typeofClass.jump(10,4): error TS2339: Property 'foo' does not exist on type 'typeof K'.


==== tests/cases/compiler/typeofClass.jump (2 errors) ====
    class K {
        foo: number;
        static bar: string;
    }
    
    var k1: K;
    k1.foo;
    k1.bar;
       ~~~
!!! error TS2339: Property 'bar' does not exist on type 'K'.
    var k2: typeof K;
    k2.foo;
       ~~~
!!! error TS2339: Property 'foo' does not exist on type 'typeof K'.
    k2.bar;